--- a/safe_landing.html
+++ b/safe_landing.html
@@ -4,17 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>safehomes</title>
+    <link rel="stylesheet" href="safe_style.css">
 </head>
 <body>
     <header>
         <h1><img src="./assets/Group 10.png"></h1>
         <nav>
             <ol>
-                <li>
-                    <a href="#">문의하기</a>
+                <li class="style_button1">
+                    <a id="문의" href="#">문의하기</a>
                 </li>
-                <li>
-                    <a href="#">시작하기</a>
+                <li class="style_button2">
+                    <a id="시작" href="#">시작하기</a>
                 </li>
             </ol>
         </nav>
@@ -22,28 +23,32 @@
     <section>
         <!-- add background img -->
         <div id="mainImg">
-            <p>내 집 보증금</p>
-            <p>우야노</p>
-            <a href="#">지금 걱정 해결하기 &gt;</a>
+            <div>
+                <p>내 집 보증금<br>
+                우야노</p>
+                <a href="#">지금 걱정 해결하기 &gt;</a>
+            </div>
         </div>
     </section>
     <article>
         <div class="article_container">
             <h3 class="article_title">세이프홈즈, <strong>전/월세 보증금 지킴이 서비스입니다.</strong></h3>
             <div class="article_wrap">
-                <img src="./assets/content_img.png">
-                <p class="content_title">등기부등본 등을 분석한 보증금 지킴이 리포트</p>
-                <p class="content_contents">내 보증금을 어떻게 지킬 수 있을까? 라는 단계를 거쳐서 여러분들에게 계약전 보증금 지킴이 리포트 제공</p>
-            </div>
-            <div class="article_wrap">
-                <img src="./assets/content_img.png">
-                <p class="content_title">등기부등본 등을 분석한 보증금 지킴이 리포트</p>
-                <p class="content_contents">내 보증금을 어떻게 지킬 수 있을까? 라는 단계를 거쳐서 여러분들에게 계약전 보증금 지킴이 리포트 제공</p>
-            </div>
-            <div class="article_wrap">
-                <img src="./assets/content_img.png">
-                <p class="content_title">등기부등본 등을 분석한 보증금 지킴이 리포트</p>
-                <p class="content_contents">내 보증금을 어떻게 지킬 수 있을까? 라는 단계를 거쳐서 여러분들에게 계약전 보증금 지킴이 리포트 제공</p>
+                <div class="article_subWrap">
+                    <img src="./assets/content_img.png">
+                    <p class="content_title">등기부등본 등을 분석한 보증금 지킴이 리포트</p>
+                    <p class="content_contents">내 보증금을 어떻게 지킬 수 있을까? 라는 단계를 거쳐서 여러분들에게 계약전 보증금 지킴이 리포트 제공</p>
+                </div>
+                <div class="article_subWrap">
+                    <img src="./assets/content_img.png">
+                    <p class="content_title">등기부등본 등을 분석한 보증금 지킴이 리포트</p>
+                    <p class="content_contents">내 보증금을 어떻게 지킬 수 있을까? 라는 단계를 거쳐서 여러분들에게 계약전 보증금 지킴이 리포트 제공</p>
+                </div>
+                <div class="article_subWrap">
+                    <img src="./assets/content_img.png">
+                    <p class="content_title">등기부등본 등을 분석한 보증금 지킴이 리포트</p>
+                    <p class="content_contents">내 보증금을 어떻게 지킬 수 있을까? 라는 단계를 거쳐서 여러분들에게 계약전 보증금 지킴이 리포트 제공</p>
+                </div>
             </div>
             <a href="#">지금 바로 사용하기 &gt;</a>
         </div>
@@ -52,49 +57,53 @@
         <div class="article_container">
             <h3 class="article_title"><strong>부동산을 찾았지만 망설이고 계시나요?</strong></h3>
             <div class="article_wrap">
-                <img src="./assets/content_img.png">
-                <p class="content_title">등기부등본 등을 분석한 보증금 지킴이 리포트</p>
-                <p class="content_contents">내 보증금을 어떻게 지킬 수 있을까? 라는 단계를 거쳐서 여러분들에게 계약전 보증금 지킴이 리포트 제공</p>
-            </div>
-            <div class="article_wrap">
-                <img src="./assets/content_img.png">
-                <p class="content_title">등기부등본 등을 분석한 보증금 지킴이 리포트</p>
-                <p class="content_contents">내 보증금을 어떻게 지킬 수 있을까? 라는 단계를 거쳐서 여러분들에게 계약전 보증금 지킴이 리포트 제공</p>
-            </div>
-            <div class="article_wrap">
-                <img src="./assets/content_img.png">
-                <p class="content_title">등기부등본 등을 분석한 보증금 지킴이 리포트</p>
-                <p class="content_contents">내 보증금을 어떻게 지킬 수 있을까? 라는 단계를 거쳐서 여러분들에게 계약전 보증금 지킴이 리포트 제공</p>
+                <div class="article_subWrap">
+                    <img src="./assets/content_img.png">
+                    <p class="content_title">등기부등본 등을 분석한 보증금 지킴이 리포트</p>
+                    <p class="content_contents">내 보증금을 어떻게 지킬 수 있을까? 라는 단계를 거쳐서 여러분들에게 계약전 보증금 지킴이 리포트 제공</p>
+                </div>
+                <div class="article_subWrap">
+                    <img src="./assets/content_img.png">
+                    <p class="content_title">등기부등본 등을 분석한 보증금 지킴이 리포트</p>
+                    <p class="content_contents">내 보증금을 어떻게 지킬 수 있을까? 라는 단계를 거쳐서 여러분들에게 계약전 보증금 지킴이 리포트 제공</p>
+                </div>
+                <div class="article_subWrap">
+                    <img src="./assets/content_img.png">
+                    <p class="content_title">등기부등본 등을 분석한 보증금 지킴이 리포트</p>
+                    <p class="content_contents">내 보증금을 어떻게 지킬 수 있을까? 라는 단계를 거쳐서 여러분들에게 계약전 보증금 지킴이 리포트 제공</p>
+                </div>
             </div>
         </div>
     </article>
     <article>
         <div class="article_container">
             <h3 class="article_title">세이프홈즈, <strong>어떻게 내 보증금을 지킬 수 있을까요?</strong></h3>
-            <div class="article_wrap">
-                <p class="content_hash">#1</p>
-                <p class="content_title">계약 전 주소검색</p>
-                <p class="content_contents">내 보증금을 어떻게 지킬 수 있을까? 라는 단계를 거쳐서 여러분들에게 계약전 보증금 지킴이 리포트 제공</p>
-            </div>
-            <div class="article_wrap">
-                <p class="content_hash">#2</p>
-                <p class="content_title">보증금 지킴이 리포트 확인</p>
-                <p class="content_contents">내 보증금을 어떻게 지킬 수 있을까? 라는 단계를 거쳐서 여러분들에게 계약전 보증금 지킴이 리포트 제공</p>
-            </div>
-            <div class="article_wrap">
-                <p class="content_hash">#3</p>
-                <p class="content_title">체크리스트를 따라 계약 진행</p>
-                <p class="content_contents">내 보증금을 어떻게 지킬 수 있을까? 라는 단계를 거쳐서 여러분들에게 계약전 보증금 지킴이 리포트 제공</p>
-            </div>
-            <div class="article_wrap">
-                <p class="content_hash">#4</p>
-                <p class="content_title">실시간 등기 변동 알림</p>
-                <p class="content_contents">내 보증금을 어떻게 지킬 수 있을까? 라는 단계를 거쳐서 여러분들에게 계약전 보증금 지킴이 리포트 제공</p>
-            </div>
-            <div class="article_wrap">
-                <p class="content_hash">#5</p>
-                <p class="content_title">계약 기간 안심하고 살기</p>
-                <p class="content_contents">내 보증금을 어떻게 지킬 수 있을까? 라는 단계를 거쳐서 여러분들에게 계약전 보증금 지킴이 리포트 제공</p>
+            <div class="article_textWrap">
+                <div class="article_subWrap">
+                    <p class="content_hash">#1</p>
+                    <p class="content_title">계약 전 주소검색</p>
+                    <p class="content_contents">내 보증금을 어떻게 지킬 수 있을까? 라는 단계를 거쳐서 여러분들에게 계약전 보증금 지킴이 리포트 제공</p>
+                </div>
+                <div class="article_subWrap">
+                    <p class="content_hash">#2</p>
+                    <p class="content_title">보증금 지킴이 리포트 확인</p>
+                    <p class="content_contents">내 보증금을 어떻게 지킬 수 있을까? 라는 단계를 거쳐서 여러분들에게 계약전 보증금 지킴이 리포트 제공</p>
+                </div>
+                <div class="article_subWrap">
+                    <p class="content_hash">#3</p>
+                    <p class="content_title">체크리스트를 따라 계약 진행</p>
+                    <p class="content_contents">내 보증금을 어떻게 지킬 수 있을까? 라는 단계를 거쳐서 여러분들에게 계약전 보증금 지킴이 리포트 제공</p>
+                </div>
+                <div class="article_subWrap">
+                    <p class="content_hash">#4</p>
+                    <p class="content_title">실시간 등기 변동 알림</p>
+                    <p class="content_contents">내 보증금을 어떻게 지킬 수 있을까? 라는 단계를 거쳐서 여러분들에게 계약전 보증금 지킴이 리포트 제공</p>
+                </div>
+                <div class="article_subWrap">
+                    <p class="content_hash">#5</p>
+                    <p class="content_title">계약 기간 안심하고 살기</p>
+                    <p class="content_contents">내 보증금을 어떻게 지킬 수 있을까? 라는 단계를 거쳐서 여러분들에게 계약전 보증금 지킴이 리포트 제공</p>
+                </div>
             </div>
             <a href="#">조금 더 알아보기 &gt;</a>
         </div>
@@ -102,70 +111,82 @@
     <article>
         <div class="service_explain">
             <img src="./assets/Phone.png">
-            <p class="explain_cate">리포트</p>
-            <p class="explain_title">등기부 등본 등을 분석한
-                보증금 지킴이 리포트</p>
-            <p class="explain_contents">어려운 부동산 법률 용어가 아닌, 누구나 쉽게 이해 할 수 있는 보증금 지킴이 리포트 제공</p>
-        </div>
-    </article>
-    <article>
-        <div class="service_explain">
-            <p class="explain_cate">리포트</p>
-            <p class="explain_title">등기부 등본 등을 분석한
-                보증금 지킴이 리포트</p>
+            <div class="explain_zone">
+                <p class="explain_cate">리포트</p>
+                <p class="explain_title">등기부 등본 등을 분석한
+                    보증금 지킴이 리포트</p>
                 <p class="explain_contents">어려운 부동산 법률 용어가 아닌, 누구나 쉽게 이해 할 수 있는 보증금 지킴이 리포트 제공</p>
+            </div>
+        </div>
+    </article>
+    <article>
+        <div class="service_explain">
+            <div class="explain_zone">
+                <p class="explain_cate">리포트</p>
+                <p class="explain_title">등기부 등본 등을 분석한
+                    보증금 지킴이 리포트</p>
+                <p class="explain_contents">어려운 부동산 법률 용어가 아닌, 누구나 쉽게 이해 할 수 있는 보증금 지킴이 리포트 제공</p>
+            </div>
             <img src="./assets/Phone.png">
         </div>
     </article>
     <article>
         <div class="service_explain">
             <img src="./assets/Phone.png">
-            <p class="explain_cate">리포트</p>
-            <p class="explain_title">등기부 등본 등을 분석한
-                보증금 지킴이 리포트</p>
-            <p class="explain_contents">어려운 부동산 법률 용어가 아닌, 누구나 쉽게 이해 할 수 있는 보증금 지킴이 리포트 제공</p>
-            <img class="subImg" src="./assets/Compact.png">
-            <img class="subImg" src="./assets/Compact-1.png">
+            <div class="explain_zone">
+                <p class="explain_cate">리포트</p>
+                <p class="explain_title">등기부 등본 등을 분석한
+                    보증금 지킴이 리포트</p>
+                <p class="explain_contents">어려운 부동산 법률 용어가 아닌, 누구나 쉽게 이해 할 수 있는 보증금 지킴이 리포트 제공</p>
+                <img class="subImg" src="./assets/Compact.png">
+                <img class="subImg" src="./assets/Compact-1.png">
+            </div>
         </div>
     </article>
     <article>
         <div class="article_container">
             <h3 class="article_title">세이프홈즈, <strong>서비스 가격은 어떻게 될까요?</strong></h3>
-            <div class="price_wrap">
-                <p class="content_title">전/월세 보증금<br>
-                    지킴이 리포트</p>
-                <p class="content_contents">해당 플랜은 여러분을 위해 리포트를 제공합니다. 실제로 이 리포트는 언제 어디서든지 사용할 수 있고 그렇습니다.</p>
-                <p class="price_number">80,000 KRW</p>
-                <p class="price_explain">1회 50,000원 / 1주 80,000원</p>
-                <button>지금 바로 사용하기</button>
-            </div>
-            <div class="price_wrap">
-                <p class="content_title">전/월세 보증금<br>
-                    지킴이 리포트</p>
-                <p class="content_contents">해당 플랜은 여러분을 위해 리포트를 제공합니다. 실제로 이 리포트는 언제 어디서든지 사용할 수 있고 그렇습니다.</p>
-                <p class="price_number">80,000 KRW</p>
-                <p class="price_explain">1회 50,000원 / 1주 80,000원</p>
-                <button>지금 바로 사용하기</button>
-            </div>
-            <div class="price_wrap">
-                <p class="content_title">전/월세 보증금<br>
-                    지킴이 리포트</p>
-                <p class="content_contents">해당 플랜은 여러분을 위해 리포트를 제공합니다. 실제로 이 리포트는 언제 어디서든지 사용할 수 있고 그렇습니다.</p>
-                <p class="price_number">80,000 KRW</p>
-                <p class="price_explain">1회 50,000원 / 1주 80,000원</p>
-                <button>지금 바로 사용하기</button>
+            <div class="article_wrap">
+                <div class="price_wrap">
+                    <p class="content_title">전/월세 보증금<br>
+                        지킴이 리포트</p>
+                    <p class="content_contents">해당 플랜은 여러분을 위해 리포트를 제공합니다. 실제로 이 리포트는 언제 어디서든지 사용할 수 있고 그렇습니다.</p>
+                    <p class="price_number">80,000 KRW</p>
+                    <p class="price_explain">1회 50,000원 / 1주 80,000원</p>
+                    <button>지금 바로 사용하기</button>
+                </div>
+                <div class="price_wrap">
+                    <p class="content_title">전/월세 보증금<br>
+                        지킴이 리포트</p>
+                    <p class="content_contents">해당 플랜은 여러분을 위해 리포트를 제공합니다. 실제로 이 리포트는 언제 어디서든지 사용할 수 있고 그렇습니다.</p>
+                    <p class="price_number">80,000 KRW</p>
+                    <p class="price_explain">1회 50,000원 / 1주 80,000원</p>
+                    <button>지금 바로 사용하기</button>
+                </div>
+                <div class="price_wrap">
+                    <p class="content_title">전/월세 보증금<br>
+                        지킴이 리포트</p>
+                    <p class="content_contents">해당 플랜은 여러분을 위해 리포트를 제공합니다. 실제로 이 리포트는 언제 어디서든지 사용할 수 있고 그렇습니다.</p>
+                    <p class="price_number">80,000 KRW</p>
+                    <p class="price_explain">1회 50,000원 / 1주 80,000원</p>
+                    <button>지금 바로 사용하기</button>
+                </div>
             </div>
             <a href="#">원하시는 플랜이 없다면 문의주세요! &gt;</a>
         </div>
     </article>
     <article>
-        <h3 class="article_title">세이프홈즈, <strong>없었으면 큰일날 뻔!</strong></h3>
-        <div id="style_flex">
-            <img src="./assets/review1.png">
-            <img src="./assets/review2.png">
-            <img src="./assets/review3.png">
+        <div class="article_container">
+            <h3 class="article_title">세이프홈즈, <strong>없었으면 큰일날 뻔!</strong></h3>
+            <div id="style_flex">
+                <div id="style_linear"></div>
+                <img src="./assets/review1.png">
+                <img src="./assets/review2.png">
+                <img src="./assets/review3.png">
+                
+            </div>
+            <a href="#">후기 진위여부 파악하러 가기 &gt;</a>
         </div>
-        <a href="#">후기 진위여부 파악하러 가기 &gt;</a>
     </article>
     <section>
         <!-- add background img -->
